--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,18 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  
+}
+
+html {
+  background: 
+    /* top, transparent red, faked with gradient */ 
+    linear-gradient(
+      rgba(255, 255, 255, 0.45), 
+      rgba(255, 255, 255, 0.45)
+    ),
+    /* bottom, image */
+    url('./images/background.jpg') right;
 }
 
 .test {
