--- a/src/App.css
+++ b/src/App.css
@@ -2,27 +2,20 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+#app-body {
+
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+#app-content {
+  min-height: calc(100vh - 5em);
+  margin-bottom: 2em;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#app-footer {
+  height: 3em;
+  background-color: white;
+  text-align: center;
+  padding: 1em;
+  border-top: 1px solid black;
+  overflow: hidden;
 }
