added component for displaying and editing the same text

--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,14 @@ html {
   display: block;
 }
 
+.inline {
+  display: inline;
+}
+
+.input-small {
+  width: 40%;
+}
+
 .buttonify {
   margin: 8px;
   display: inline-block;
